@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.359 2008-12-08 20:56:36 guru Exp $
+	$Id: ChangeLog,v 1.360 2008-12-08 23:03:07 guru Exp $
 -----------------------------------------------------------------------------------------
 2008-12-08	pwessel
 	* gmt_plot.c:		Bug in GMT_fill_polygon that affected polygon outline
@@ -7,7 +7,8 @@
 				the Sutherland/Hodgman algorithm when there are no map
 				jumps in longitude.  Fixes problem with tiny strips of
 				"land" along map perimeter for some projections.
-	* gmt_math.h:		Removed unnecessary prototypes for system math functions.
+	* gmt_math.h:		Check for macro definitions for system math functions.
+	* gmt_vector.c:		GMT_resample_path would add 360 to points along meridians.
 	
 2008-12-05	pwessel
 	* greenspline.c:	New interpolation/gridding program for 1-3 dimensions using
